
  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005/02/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_LIST code (could crash the program)


2005/02/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- now the fingerprint of a certificate is written to the DB when converting a
  certificate
- added known public CA certificates which are now used by Gwens SSL code


2005/02/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_DBIO_GetPluginPath() which looksup the DBIO path from
  the Windows registry (or returns the compile-time value on non-win32
  platforms)
- added function GWEN_Directory_OsifyPath() which is needed on Win32 platforms
  to transform a path (possibly containing a drive letter like in "/c/") into
  a system-usable path.
- create DLLs for plugins
- fixed DLL creation targets (don't create DLL from inside dlldir)


2005-02-14   Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.iss.in: Add Pascal scripting program that will adapt
	the gwenhywfar-config at *installation time* according to the
	local paths.


2005/02/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in GWEN_Directory_HandlePathElement() on WIN32 platforms
- decreased verbosity of directory_all.c and in nettransportssl.c
- added a note about regexp.dll to README
- now always break SSL connection if the user does not trust the cert (not
  even temporarily)
- fixed a newly introduced bug in mklistdoc/Makefile.am: GWEN_HEADERS must be
  quoted.


2005-02-14   Christian Stimming <stimming@tuhh.de>

	* configure.ac, */Makefile.am: Clean up and unify installation